--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -33,8 +33,8 @@
                             <div id="syntax_text" class="col-6 offset-6 mt-5">
                                 <p>Синтаксис команды</p>
                                 <div class="form-floating">
-                                  <input type="email" class="form-control" id="floatingInputDisabled" placeholder="name@example.com" disabled>
-                                  <label for="floatingInputDisabled"><span id="modal_syntaxis" style="color: rgb(0, 119, 255)"></span> <i id="modal_graytext"></i></label>
+                                  <textarea class="form-control" id="floatingTextarea2Disabled" disabled>
+                                  <label for="floatingTextarea2Disabled"><span id="modal_syntaxis" style="color: rgb(0, 119, 255)"></span> <i id="modal_graytext"></i></label>
                                 </div>
                             </div>
                         </div>
