--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -30,11 +30,12 @@
                         <div id="modal_content" style="display: inline-block;" class="modal-body">
                             <img style="border: 2px solid white; border-radius: 10px;" src="../../staticroot/gifs/wiki.gif" id="modal_gif" class="col-5" alt="">
                             <p id="modal_content_text" class="col-6 offset-6" style="margin-top: -20vh;"></p>
+                            
                             <div id="syntax_text" class="col-6 offset-6 mt-5">
                                 <p>Синтаксис команды</p>
-                                <div class="form-floating">
-                                  <textarea class="form-control" id="floatingTextarea2Disabled" disabled>
-                                  <label for="floatingTextarea2Disabled"><span id="modal_syntaxis" style="color: rgb(0, 119, 255)"></span> <i id="modal_graytext"></i></label>
+                                <div class="form-floating mb-3">
+                                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 100px" disabled></textarea>
+                                    <label for="floatingTextarea2Disabled"><span id="modal_syntaxis" style="color: rgb(0, 119, 255)"></span> <i id="modal_graytext"></i></label>
                                 </div>
                             </div>
                         </div>
