--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -99,7 +99,7 @@
     new Card("Pdf ==> Jpg", "Данная функция конвертирует файлы формата PDF в файлы формата jpg", "pdf_to_jpg.svg", [1,1,1], "wiki.gif", "pdf2jpg", "\n-pdf_файл"),
     new Card("MP4 ==> MP3", "Данная функция конвертирует файлы формата MP4 в файлы формата MP3", "mp4_to_mp3.jpg", [1, 0, 0], "wiki.gif", "mp42mp3", "\n-mp4_файл"),
 
-    new Card("API", "Данная функция добавляет 4 различных команд связанных с API", "api.png", [1,1,1], "wiki.gif", "add_api\n/run_api\n/list_api\n/delete_api", "\n-pdf_файл\n-pdf_файл\n-pdf_файл\n-pdf_файл"),
+    new Card("API", "Данная функция добавляет 4 различных команд связанных с API", "api.png", [1,1,1], "wiki.gif", "add_api<br>/run_api<br>/list_api\n/delete_api", "\n-pdf_файл\n-pdf_файл\n-pdf_файл\n-pdf_файл"),
     new Card("Скачать видео/плейлист с Ютуба", "Данная функция выполняет два действия — при отправке URL видео, она скачает полностью видео. При отправке URL плейлиста она скачает и отправит звуковые дорожки всех видео в этом плейлисте", "youtube_downloader.png", [1,1,1], "yt.gif", "", "Ссылка_на_видео/плейлист"),
     new Card("TTS", "Данная функция преобразовывает текст в речь, синтезируя голос", "tts_logo.png", [1,1,1], "tts.gif", "tts", "\n-Текст"),
     new Card("STT", "Данная функция преобразовывает речь в текст, распознавая голос", "stt_logo.png", [1,1,1], "stt.gif", "", "Работает при отправке ГС"),]
