add max size of textarea

--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -34,7 +34,7 @@
                             <div id="syntax_text" class="col-6 offset-6 mt-5">
                                 <p>Синтаксис команды</p>
                                 <div class="form-floating mb-3">
-                                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 100px" disabled></textarea>
+                                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2Disabled" style="height: 7vh; max-height: 15vh;" disabled></textarea>
                                     <label for="floatingTextarea2Disabled"><span id="modal_syntaxis" style="color: rgb(0, 119, 255)"></span> <i id="modal_graytext"></i></label>
                                 </div>
                             </div>
@@ -102,7 +102,7 @@
     new Card("API", "Данная функция добавляет 4 различных команд связанных с API", "api.png", [1,1,1], "wiki.gif", "run_api<br>/list_api<br>/delete_api<br>/add_api", "ссылка_на_API"),
     new Card("Скачать видео/плейлист с Ютуба", "Данная функция выполняет два действия — при отправке URL видео, она скачает полностью видео. При отправке URL плейлиста она скачает и отправит звуковые дорожки всех видео в этом плейлисте", "youtube_downloader.png", [1,1,1], "yt.gif", "", "Ссылка_на_видео/плейлист"),
     new Card("TTS", "Данная функция преобразовывает текст в речь, синтезируя голос", "tts_logo.png", [1,1,1], "tts.gif", "tts", "<br>-Текст"),
-    new Card("STT", "Данная функция преобразовывает речь в текст, распознавая голос", "stt_logo.png", [1,1,1], "stt.gif", "", "Работает при отправке ГС"),]
+    new Card("STT", "Данная функция преобразовывает речь в текст, распознавая голос", "stt_logo.png", [1,1,1], "stt.gif", "", "Работает при отправке ГС")]
 
 
     //добавление карточкек в html
