--- a/first/templates/download_bot.html
+++ b/first/templates/download_bot.html
@@ -6,15 +6,28 @@
             <h2 class="text-center mt-5">Чтобы скачать файл с вашим уникальным ботом, нажмите кнопку ниже. Если у вас возникли проблемы, вы всегда можете 
                 обратится в <a style="text-decoration: none;" href="../tech_support/">тех. поддержку!</a></h2>
             <div class="text-center">
-                {% if os == "win" %}
-                    <a class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/{{ file }}.exe" download="">
-                        Скачать бота
-                    </a>
+                {% if bot_status != "SUCCESS" %}
+                    {% if os == "win" %}
+                        <a class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/{{ file }}.exe" download="">
+                            Скачать бота
+                        </a>
+                    {% else %}
+                        <a class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/{{ file }}" download="">
+                            Скачать бота
+                        </a>
+                    {% endif %}
                 {% else %}
-                    <a class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/{{ file }}" download="">
-                        Скачать бота
-                    </a>
+                    {% if os == "win" %}
+                        <a class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/{{ file }}.exe" download="" disabled>
+                            Скачать бота
+                        </a>
+                    {% else %}
+                        <a class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/{{ file }}" download="" disabled>
+                            Скачать бота
+                        </a>
+                    {% endif %}
                 {% endif %}
+
             </div>
         </div>
     </div>
