--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -91,7 +91,7 @@
     new Card("Выключить ПК", "Данная функция обеспечивает возможность удаленного выключения компьютера", "turnoff.png", [1, 0, 1], "wiki.gif", "turnoff"),
     new Card("Перезагрузить ПК", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "reboot.png", [1, 0, 1], "wiki.gif", ""),
     new Card("Информация о ПК", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "info.png", [1,1,1], "info.gif", "komp", ""),
-    new Card("Скриншот", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "camera.png", [1,0,0], "capture.gif", "capture", ""),
+    new Card("Скриншот", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "camera.png", [1,0,1], "capture.gif", "capture", ""),
     new Card("Загрузить на ПК", "Данная функция позволяет загрузить файл с компьютера в телеграмм", "upload.jpg", [1,0,0], "download.gif", "download", "<br>-Файл"),
     new Card("Скачивание файла с ПК", "Данная функция позволяет загрузить файл на компьютер с телеграмма", "download.png", [1, 0, 0], "upload.gif", "upload", "<br>-Путь_до_файла"),
     
@@ -100,7 +100,7 @@
     new Card("MP4 ==> MP3", "Данная функция конвертирует файлы формата MP4 в файлы формата MP3", "mp4_to_mp3.jpg", [1, 0, 1], "wiki.gif", "mp42mp3", " <br>-mp4_файл"),
 
     new Card("API", "Данная функция добавляет 4 различных команд связанных с API", "api.png", [1,1,1], "wiki.gif", "run_api<br>/list_api<br>/delete_api<br>/add_api", "ссылка_на_API"),
-    new Card("Скачать видео/плейлист с Ютуба", "Данная функция выполняет два действия — при отправке URL видео, она скачает полностью видео. При отправке URL плейлиста она скачает и отправит звуковые дорожки всех видео в этом плейлисте", "youtube_downloader.png", [1,1,1], "yt.gif", "", "Ссылка_на_видео/плейлист"),
+    //new Card("Скачать видео/плейлист с Ютуба", "Данная функция выполняет два действия — при отправке URL видео, она скачает полностью видео. При отправке URL плейлиста она скачает и отправит звуковые дорожки всех видео в этом плейлисте", "youtube_downloader.png", [1,1,1], "yt.gif", "", "Ссылка_на_видео/плейлист"),
     //new Card("TTS", "Данная функция преобразовывает текст в речь, синтезируя голос", "tts_logo.png", [1,1,1], "tts.gif", "tts", "<br>-Текст"),
     new Card("STT", "Данная функция преобразовывает речь в текст, распознавая голос", "stt_logo.png", [1,1,1], "stt.gif", "", "Работает при отправке ГС")]
 
