--- a/first/templates/download_bot.html
+++ b/first/templates/download_bot.html
@@ -8,11 +8,11 @@
             <div class="text-center">
                 {% if bot_status != "SUCCESS" %}
                     {% if os == "win" %}
-                        <a class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/{{ file }}.exe" download="" disabled>
+                        <a class="btn btn-primary p-3 fs-3 w-30 disabled" href="../../staticroot/BOT/{{ file }}.exe" download="">
                             Скачать бота
                         </a>
                     {% else %}
-                        <a class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/{{ file }}" download="" disabled>
+                        <a class="btn btn-primary p-3 fs-3 w-30 disabled" href="../../staticroot/BOT/{{ file }}" download="">
                             Скачать бота
                         </a>
                     {% endif %}
