--- a/first/templates/download_bot.html
+++ b/first/templates/download_bot.html
@@ -6,7 +6,7 @@
             <h2 class="text-center mt-5">Чтобы скачать файл с вашим уникальным ботом, нажмите кнопку ниже. Если у вас возникли проблемы, вы всегда можете 
                 обратится в <a style="text-decoration: none;" href="../tech_support/">тех. поддержку!</a></h2>
             <div class="text-center">
-                {{bot_status}}
+                <h1>{{bot_status}}</h1>
                 {% if bot_status != "SUCCESS" %}
                     {% if os == "win" %}
                         <a class="btn btn-primary p-3 fs-3 w-30 disabled" href="../../staticroot/BOT/{{ file }}.exe" download="">
