--- a/first/templates/download_bot.html
+++ b/first/templates/download_bot.html
@@ -6,31 +6,27 @@
             <h2 class="text-center mt-5">Чтобы скачать файл с вашим уникальным ботом, нажмите кнопку ниже. Если у вас возникли проблемы, вы всегда можете 
                 обратится в <a style="text-decoration: none;" href="../tech_support/">тех. поддержку!</a></h2>
             <div class="text-center">
-                <h1>{{bot_status}}</h1>
-                {% if bot_status != "SUCCESS" %}
-                    {% if os == "win" %}
-                        <a class="btn btn-primary p-3 fs-3 w-30 disabled" href="../../staticroot/BOT/{{ file }}.exe" download="">
-                            Скачать бота
-                        </a>
-                    {% else %}
-                        <a class="btn btn-primary p-3 fs-3 w-30 disabled" href="../../staticroot/BOT/{{ file }}" download="">
-                            Скачать бота
-                        </a>
-                    {% endif %}
+                <h1 id="bot_status" style="display: none;">{{bot_status}}</h1>
+                {% if os == "win" %}
+                    <a  id="bot_download" class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/{{ file }}.exe" download="">
+                        Скачать бота
+                    </a>
                 {% else %}
-                    {% if os == "win" %}
-                        <a class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/{{ file }}.exe" download="">
-                            Скачать бота
-                        </a>
-                    {% else %}
-                        <a class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/{{ file }}" download="" >
-                            Скачать бота
-                        </a>
-                    {% endif %}
+                    <a id="bot_download" class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/{{ file }}" download="" >
+                        Скачать бота
+                    </a>
                 {% endif %}
 
             </div>
         </div>
     </div>
 </div>
+<script>
+    let botstatus = bot_status
+    bot_download.addEventListener("click", () => {
+        if (botstatus != "SUCCESS") {
+            alert("Ваш бот ещё не готов, подождите немного...")
+        }
+    })
+</script>
 {% endblock %}
