--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -12,9 +12,9 @@
         <form class="col-8 offset-2 form p-2" method="POST" action="" style=""><br>
             {% csrf_token %}
             <div class="col-10 offset-1">
-                <input required type="text" class="form-control m-1" placeholder="Bot TOKEN" name="token">
-                <input required type="text" class="form-control m-1" placeholder="Bot name" name="name">
-                <input required type="text" class="form-control m-1" placeholder="Bot short name" name="short_name">
+                <input id="token" required type="text" class="form-control m-1" placeholder="Bot TOKEN" name="token">
+                <input id="name" required type="text" class="form-control m-1" placeholder="Bot name" name="name">
+                <input id="shortname" required type="text" class="form-control m-1" placeholder="Bot short name" name="short_name">
                 <button type="button" id="question" class="btn card-text text-primary text-end" data-bs-toggle="modal"
                         data-bs-target="#staticBackdrop"
                         style="font-size: 24px; margin-right: 10px;display: inline-block;">Где взять данные?
@@ -154,14 +154,6 @@
             modal_gif.src = '../../staticroot/gifs/' + card_values.modal
             modal_graytext.innerHTML = card_values.graytext
         })
-        
-        //модалка при создании бота
-        create.addEventListener("click", () => {
-            modal_header.innerHTML = "Ваш бот создается..."
-            modal_content_text.innerHTML = "Создание бота занимает некоторое время. Обычно это не столь долгий процесс. Сразу после создания вас переведет на страницу, где вы сможете его скачать. Если у вас возникли какие-то проблемы, обратитесь в техподдержку. Вы можете закрыть это окно."
-            syntax_text.classList.add("d-none")
-            modal_gif.src = '../../staticroot/gifs/load.gif'
-        })
 
         //поиск по ОС
 
@@ -197,6 +189,28 @@
         })
 
 
+        //модалка при создании бота
+        create.addEventListener("click", () => {
+            if (!(name.innerHTML != "" && token.innerHTML != "" && shortname.innerHTML != "")) {
+                modal_header.innerHTML = "Ошибка"
+                modal_content_text.innerHTML = "Вы заполнили не все данные. Пожалуйста, вернитесь к форме и закончите её заполнение."
+                syntax_text.classList.add("d-none")
+                modal_gif.src = '../../staticroot/gifs/load.gif'
+            }
+            if (os == [0,0,0]) {
+                modal_header.innerHTML = "Ошибка"
+                modal_content_text.innerHTML = "Вы не выбрали операционную систему. Пожалуйста, вернитесь к форме и закончите её заполнение."
+                syntax_text.classList.add("d-none")
+                modal_gif.src = '../../staticroot/gifs/load.gif'
+            }
+            if ((name.innerHTML != "" && token.innerHTML != "" && shortname.innerHTML != "") && os == [0,0,0])
+            modal_header.innerHTML = "Ваш бот создается..."
+            modal_content_text.innerHTML = "Создание бота занимает некоторое время. Обычно это не столь долгий процесс. Сразу после создания вас переведет на страницу, где вы сможете его скачать. Если у вас возникли какие-то проблемы, обратитесь в техподдержку. Вы можете закрыть это окно."
+            syntax_text.classList.add("d-none")
+            modal_gif.src = '../../staticroot/gifs/load.gif'
+        })
+
+
         //поиск по названию и описанию карточек
 
         search.addEventListener("input", () => {
@@ -212,6 +226,8 @@
             }
         })
     }
+
+
 
 
 </script>
