--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -13,7 +13,7 @@
             {% csrf_token %}
             <div class="col-10 offset-1">
                 <input id="token" required type="text" class="form-control m-1" placeholder="Bot TOKEN" name="token">
-                <input id="name" required type="text" class="form-control m-1" placeholder="Bot name" name="name">
+                <input id="bot_name" required type="text" class="form-control m-1" placeholder="Bot name" name="name">
                 <input id="shortname" required type="text" class="form-control m-1" placeholder="Bot short name" name="short_name">
                 <button type="button" id="question" class="btn card-text text-primary text-end" data-bs-toggle="modal"
                         data-bs-target="#staticBackdrop"
@@ -191,7 +191,8 @@
 
         //модалка при создании бота
         create.addEventListener("click", () => {
-            if (!(name.innerHTML != "" && token.innerHTML != "" && shortname.innerHTML != "")) {
+            console.log(bot_name.innerHTML ,token.innerHTML , shortname.innerHTML)
+            if (!(bot_name.innerHTML != "" && token.innerHTML != "" && shortname.innerHTML != "")) {
                 modal_header.innerHTML = "Ошибка"
                 modal_content_text.innerHTML = "Вы заполнили не все данные. Пожалуйста, вернитесь к форме и закончите её заполнение."
                 syntax_text.classList.add("d-none")
@@ -203,7 +204,7 @@
                 syntax_text.classList.add("d-none")
                 modal_gif.src = '../../staticroot/gifs/load.gif'
             }
-            if ((name.innerHTML != "" && token.innerHTML != "" && shortname.innerHTML != "") && os == [0,0,0])
+            if ((bot_name.innerHTML != "" && token.innerHTML != "" && shortname.innerHTML != "") && os == [0,0,0])
             modal_header.innerHTML = "Ваш бот создается..."
             modal_content_text.innerHTML = "Создание бота занимает некоторое время. Обычно это не столь долгий процесс. Сразу после создания вас переведет на страницу, где вы сможете его скачать. Если у вас возникли какие-то проблемы, обратитесь в техподдержку. Вы можете закрыть это окно."
             syntax_text.classList.add("d-none")
