add error catcher

--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -191,7 +191,7 @@
 
         //модалка при создании бота
         create.addEventListener("click", () => {
-            console.log(bot_name.innerHTML ,token.innerHTML , shortname.innerHTML)
+            console.log(bot_name.innerHTML != "" , token.innerHTML != "" , shortname.innerHTML != "")
             if (!(bot_name.innerHTML != "" && token.innerHTML != "" && shortname.innerHTML != "")) {
                 modal_header.innerHTML = "Ошибка"
                 modal_content_text.innerHTML = "Вы заполнили не все данные. Пожалуйста, вернитесь к форме и закончите её заполнение."
@@ -204,7 +204,7 @@
                 syntax_text.classList.add("d-none")
                 modal_gif.src = '../../staticroot/gifs/load.gif'
             }
-            if ((bot_name.innerHTML != "" && token.innerHTML != "" && shortname.innerHTML != "") && os == [0,0,0])
+            if ((name.innerHTML != "" && token.innerHTML != "" && shortname.innerHTML != "") && os == [0,0,0])
             modal_header.innerHTML = "Ваш бот создается..."
             modal_content_text.innerHTML = "Создание бота занимает некоторое время. Обычно это не столь долгий процесс. Сразу после создания вас переведет на страницу, где вы сможете его скачать. Если у вас возникли какие-то проблемы, обратитесь в техподдержку. Вы можете закрыть это окно."
             syntax_text.classList.add("d-none")
