--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -191,7 +191,7 @@
 
         //модалка при создании бота
         create.addEventListener("click", () => {
-            console.log(bot_name.innerHTML != "" , token.innerHTML != "" , shortname.innerHTML != "")
+            console.log(!(bot_name.innerHTML != "" && token.innerHTML != "" && shortname.innerHTML != ""))
             if (!(bot_name.innerHTML != "" && token.innerHTML != "" && shortname.innerHTML != "")) {
                 modal_header.innerHTML = "Ошибка"
                 modal_content_text.innerHTML = "Вы заполнили не все данные. Пожалуйста, вернитесь к форме и закончите её заполнение."
