--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -196,19 +196,20 @@
                 modal_header.innerHTML = "Ошибка"
                 modal_content_text.innerHTML = "Вы заполнили не все данные. Пожалуйста, вернитесь к форме и закончите её заполнение."
                 syntax_text.classList.add("d-none")
-                modal_gif.src = '../../staticroot/gifs/load.gif'
+                modal_gif.src = '../../staticroot/gifs/error.gif'
             }
             if (os == [0,0,0]) {
                 modal_header.innerHTML = "Ошибка"
                 modal_content_text.innerHTML = "Вы не выбрали операционную систему. Пожалуйста, вернитесь к форме и закончите её заполнение."
                 syntax_text.classList.add("d-none")
+                modal_gif.src = '../../staticroot/gifs/error.gif'
+            }
+            if ((name.innerHTML != "" && token.innerHTML != "" && shortname.innerHTML != "") && os == [0,0,0]) {
+                modal_header.innerHTML = "Ваш бот создается..."
+                modal_content_text.innerHTML = "Создание бота занимает некоторое время. Обычно это не столь долгий процесс. Сразу после создания вас переведет на страницу, где вы сможете его скачать. Если у вас возникли какие-то проблемы, обратитесь в техподдержку. Вы можете закрыть это окно."
+                syntax_text.classList.add("d-none")
                 modal_gif.src = '../../staticroot/gifs/load.gif'
             }
-            if ((name.innerHTML != "" && token.innerHTML != "" && shortname.innerHTML != "") && os == [0,0,0])
-            modal_header.innerHTML = "Ваш бот создается..."
-            modal_content_text.innerHTML = "Создание бота занимает некоторое время. Обычно это не столь долгий процесс. Сразу после создания вас переведет на страницу, где вы сможете его скачать. Если у вас возникли какие-то проблемы, обратитесь в техподдержку. Вы можете закрыть это окно."
-            syntax_text.classList.add("d-none")
-            modal_gif.src = '../../staticroot/gifs/load.gif'
         })
 
 
