--- a/first/templates/tech_support.html
+++ b/first/templates/tech_support.html
@@ -14,7 +14,7 @@
                 <div class="row row-cols-2 text-center">
                     <div class="col mr-5">
                        <div class="form-floating mb-3">
-                           <input type="name" class="form-control" id="floatingInput" placeholder="name@example.com">
+                           <input type="text" name="" class="form-control" id="floatingInput" placeholder="name@example.com">
                            <label for="floatingInput">Имя</label>
                        </div>
                     </div>
