--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -35,22 +35,22 @@
               <div class="card-body">
                 <p class="mb-4">Ваши боты</p>
                 {% if bots %}
-                {% for bot in bots %}
+                  {% for bot in bots %}
                       <div class="row">
                           <div class="">
                               <p class="mb-0">@{{ bot.bot_name }}</p>
                           </div>
-                          <div class="offset-1">
+                          <div class="">
                               <p class="text-muted mb-0">{{ bot.created_at }}</p>
                           </div>
-                          <div class="offset-1">
+                          <div class="">
                               <a class="btn btn-primary" href="/download_bot/?preset={{bot.bot_name}}&os={{ bot.os }}">
                                   Скачать бота
                               </a>
                           </div>
                           <form action="" method="post">
                               {% csrf_token %}
-                            <div class="offset-1">
+                            <div class="">
                               <input type="submit" name="delete_bot {{ bot.id }}" class="btn btn-danger" value="Удалить бота">
                             </div>
                           </form>
