--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -37,18 +37,18 @@
                 {% if bots %}
                   {% for bot in bots %}
                       <div class="row">
-                              <p class="mb-0">
+                              <p class="mb-0 col-3">
                                 @{{ bot.bot_name }}
                               </p>
-                              <p class="text-muted mb-0">
+                              <p class="text-muted mb-0 col-3">
                                 {{ bot.created_at }}
                               </p>
-                              <a class="btn btn-primary" href="/download_bot/?preset={{bot.bot_name}}&os={{ bot.os }}">
+                              <a class="btn btn-primary col-3" href="/download_bot/?preset={{bot.bot_name}}&os={{ bot.os }}">
                                   Скачать бота
                               </a>
                           <form action="" method="post">
                               {% csrf_token %}
-                              <input type="submit" name="delete_bot {{ bot.id }}" class="btn btn-danger" value="Удалить бота">
+                              <input type="submit" name="delete_bot {{ bot.id }}" class="btn btn-danger col-3" value="Удалить бота">
                           </form>
                       </div>
                   {% endfor %}
