--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -44,11 +44,11 @@
                                 {{ bot.created_at }}
                               </p>
                               <a class="btn btn-primary col-2" href="/download_bot/?preset={{bot.bot_name}}&os={{ bot.os }}">
-                                  Скачать бота
+                                &#8595;
                               </a>
                           <form action="" method="post" style="display: inline-block;">
                               {% csrf_token %}
-                              <input type="submit" name="delete_bot {{ bot.id }}" class="btn btn-danger col-2" value="Удалить бота">
+                              <input type="submit" name="delete_bot {{ bot.id }}" class="btn btn-danger col-2" value="&#10060;">
                           </form>
                       </div>
                   {% endfor %}
