--- a/first/templates/profile.html
+++ b/first/templates/profile.html
@@ -43,12 +43,12 @@
                               <p class="text-muted mb-0 col-2">
                                 {{ bot.created_at }}
                               </p>
-                              <a class="btn btn-primary fs-2 p-1" href="/download_bot/?preset={{bot.bot_name}}&os={{ bot.os }}">
+                              <a class="btn btn-primary fs-1 p-0 col-1 " href="/download_bot/?preset={{bot.bot_name}}&os={{ bot.os }}">
                                 &#8595;
                               </a>
                           <form action="" method="post" style="display: inline-block;">
                               {% csrf_token %}
-                              <input type="submit" name="delete_bot {{ bot.id }}" class="btn btn-danger" value="&#10060;">
+                              <input type="submit" name="delete_bot {{ bot.id }}" class="btn btn-danger col-1" value="&#10060;">
                           </form>
                       </div>
                   {% endfor %}
