Change download path

--- a/first/templates/download_bot.html
+++ b/first/templates/download_bot.html
@@ -8,7 +8,7 @@
             <div class="text-center">
                 <h1 id="bot_status" style="display: none;">{{bot_status}}</h1>
                 {% if os == "win" %}
-                    <a  id="bot_download" class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/{{ file }}.exe" download="">
+                    <a  id="bot_download" class="btn btn-primary p-3 fs-3 w-30" href="../../staticroot/BOT/dist/{{ file }}.exe" download="">
                         Скачать бота
                     </a>
                 {% else %}
