--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -66,6 +66,18 @@
 <script>
     'use strict';
 
+
+    const mysql = require('mysql2');
+ 
+    // create the connection to database
+    const connection = mysql.createConnection({
+        host: 'localhost',
+        user: 'vasya',
+        pass: "promprog",
+        database: 'bot_god_db'
+    });
+
+
     //создание класса карточки
 
     class Card{
@@ -150,9 +162,6 @@
                 floatingTextarea2Disabled.style.height = "6vh"
                 floatingTextarea2Disabled.style.maxHeight = "6vh"
             }
-            console.log(len, modal_syntaxis.innerHTML)
-            modal_gif.src = '../../staticroot/gifs/' + card_values.modal
-            modal_graytext.innerHTML = card_values.graytext
         })
 
         //поиск по ОС
@@ -191,6 +200,15 @@
 
         //модалка при создании бота
         create.addEventListener("click", () => {
+            if (connection.query(`SELECT * FROM first_botpresets WHERE bot_name="${shortname.value}"`).length != 0) {
+                modal_header.innerHTML = "Ошибка"
+                modal_content_text.innerHTML = "Вы уже создавали бота с такими данными. Чтобы создать его заново, удалите существующего бота на странице вашего профиля."
+                syntax_text.classList.add("d-none")
+                modal_gif.src = '../../staticroot/gifs/error.gif'
+            }
+            
+            modal_gif.src = '../../staticroot/gifs/' + card_values.modal
+            modal_graytext.innerHTML = card_values.graytext
             modal_header.innerHTML = "Ваш бот создается..."
                 modal_content_text.innerHTML = "Создание бота занимает некоторое время. Обычно это не столь долгий процесс. Сразу после создания вас переведет на страницу, где вы сможете его скачать. Если у вас возникли какие-то проблемы, обратитесь в техподдержку. Вы можете закрыть это окно."
                 syntax_text.classList.add("d-none")
@@ -225,6 +243,7 @@
             }
         })
     }
+
 
 
 
