--- a/staticroot/style.css
+++ b/staticroot/style.css
@@ -33,6 +33,48 @@ a.nav-hover:hover{
 	transform: scale(1.05);
 }
 
+#btn_up {
+    position: fixed;
+    bottom: 5%;
+    right: 5%;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #023653;
+    color: white;
+    cursor: pointer;
+    padding: 2%;
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+    background-image: url(../../staticroot/media/button_up.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+#btn_down {
+    position: fixed;
+    bottom: 5%;
+    right: 10%;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #023653;
+    color: white;
+    cursor: pointer;
+    padding: 2%;
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+    background-image: url(../../staticroot/media/button_down.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
 .btn.btn-primary{
 	background-color: #023653;
 	transition: .3s;
