--- a/staticroot/style.css
+++ b/staticroot/style.css
@@ -44,9 +44,9 @@ a.nav-hover:hover{
     color: white;
     cursor: pointer;
     padding: 2%;
-    border-radius: 100%;
-    width: 50px;
-    height: 50px;
+    border-radius: 50%;
+    width: 5%;
+    height: 5%;
     background-image: url(../../staticroot/media/button_up.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -65,9 +65,9 @@ a.nav-hover:hover{
     color: white;
     cursor: pointer;
     padding: 2%;
-    border-radius: 100%;
-    width: 50px;
-    height: 50px;
+    border-radius: 50%;
+    width: 5%;
+    height: 5%;
     background-image: url(../../staticroot/media/button_down.png);
     background-position: center;
     background-repeat: no-repeat;
