--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-<button id="btn_down">Перейти в конец</button>
-<button id="btn_up">Перейти к началу</button>
+<button id="btn_down" title="Перейти в конец"></button>
+<button id="btn_up" title="Перейти к началу"></button>
 
 <div class="modal" id="modal"></div>
 <div class="container">
