--- a/staticroot/style.css
+++ b/staticroot/style.css
@@ -75,6 +75,7 @@ a.nav-hover:hover{
     background-size: contain;
     box-shadow: 0 0 20px rgba(0,0,0,0.5);
 	min-width: 0;
+	margin-right: 1%;
 }
 
 .btn.btn-primary{
