--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-<button id="btn_down" class="btn btn-primary" title="Перейти в конец"></button>
-<button id="btn_up" class="btn btn-primary" title="Перейти к началу"></button>
+<button id="btn_down" class="btn btn-primary" ></button>
+<button id="btn_up" class="btn btn-primary"></button>
 
 <div class="modal" id="modal"></div>
 <div class="container">
