--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -259,6 +259,22 @@
             document.body.scrollTop = 10000;
             document.documentElement.scrollTop = 10000;
         })
+
+        function load_data_async() 
+        {
+            let r = new XMLHttpRequest()
+            r.open(method="GET", url="api/bot_check/", async=true)
+            r.onload = function () {
+                data = JSON.parse(r.response)
+                ajax_status.innerHTML = data.status
+                ajax_data.innerHTML = data.data
+                console.log(data)
+            }
+            r.onerror = function () {
+                ajax_status.innerHTML = 'error'
+            }
+            r.send()
+        }
     }
 
 
