--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -260,10 +260,11 @@
             document.documentElement.scrollTop = 10000;
         })
 
+
         function load_data_async() 
         {
             let r = new XMLHttpRequest()
-            r.open(method="GET", url="api/bot_check/", async=true)
+            r.open(method="GET", url=`api/bot_check/?bot_name=${shortname.value}`, async=true)
             r.onload = function () {
                 data = JSON.parse(r.response)
                 ajax_status.innerHTML = data.status
@@ -275,7 +276,12 @@
             }
             r.send()
         }
-        load_data_async()
+
+        shortname.addEventListener("input", () => {
+            load_data_async()
+        })
+
+        
     }
 
 
