--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -264,8 +264,7 @@
         function load_data_async() 
         {
             let r = new XMLHttpRequest()
-            console.log(r.open(method="GET", url=`/api/bot_check/?bot_name=${shortname.value}/`, async=true))
-            r.open(method="GET", url=`/api/bot_check/?bot_name=${shortname.value}/`, async=true)
+            r.open("GET", `/api/bot_check/?bot_name=${shortname.value}/`, true)
             r.onload = function () {
                 data = JSON.parse(r.response)
                 ajax_status.innerHTML = data.status
